name:                AdventOfCode
version:             2.0.17
synopsis:            Advent Of Code 2017
homepage:            https://github.com/wamaral/advent-of-code
license:             BSD3
author:              Wagner Amaral
maintainer:          wamaral@wamaral.org
copyright:           2017 Wagner Amaral
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , lens
                     , split
                     , wreq
  default-language:    Haskell2010

executable aoc
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AdventOfCode
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wamaral/advent-of-code
